test/tests/compiler/5_local_variables/valid/assignment_in_initializer.plx
pub fn main(none) i32 {
    a: i32;
    b: i32 = a = 0
    return b
}
