test/tests/compiler/5_local_variables/invalid_semantics/extra_credit/undeclared_compound_assignment_use.plx
pub fn main(none) i32 {
    b: i32 = 10
    b *= a
    return 0
}
